--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
     "version": "0.0.1",
     "dependencies": {
         "node-red-contrib-smartnora": "1.18.1",
-	"@andrei-tatar/node-red-contrib-githubespota": "1.0.0",
-	"@andrei-tatar/node-red-contrib-serialups": "1.0.0",
-	"@andrei-tatar/node-red-contrib-nibetcp": "1.1.1",
-        "node-red-node-suncalc": "1.0.1"
+        "@andrei-tatar/node-red-contrib-githubespota": "1.0.0",
+        "@andrei-tatar/node-red-contrib-serialups": "1.0.0",
+        "@andrei-tatar/node-red-contrib-nibetcp": "1.1.1",
+        "node-red-node-suncalc": "1.0.1",
+        "@andrei-tatar/node-red-contrib-mppsolar-mpi-15kw": "1.1.1"
     },
     "node-red": {
         "settings": {
