--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
     "name": "rpi-living",
     "description": "A Node-RED Project",
     "version": "0.0.1",
-    "dependencies": {},
+    "dependencies": {
+        "@andrei-tatar/node-red-contrib-amp": "1.0.2"
+    },
     "node-red": {
         "settings": {
             "flowFile": "flows.json",
